<resources>
    <string name="app_name">Home Automation</string>
    <string name="device1">Device(1):</string>
    <string name="device2">Device(2):</string>
    <string name="device3">Device(3):</string>
    <string name="device4">Device(4):</string>
    <string name="on_all">On All</string>
    <string name="off_all">Off All</string>
    <string name="home_monitor">Home Monitor</string>
    <string name="no_intruder">No intruder</string>
    <string name="mointor_1">Mointor(1):</string>
    <string name="alert_me">Alert Me</string>
</resources>
